Fixed search text alignment

--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -71,7 +71,8 @@
     padding-right: 1rem;
     border-right: 1px solid $gray-200;
     display: inline-block;
-    text-align: right;
+
+    // text-align: right;
   }
 
   .suggestion__description {
